--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -18,6 +18,20 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
     // }
 }
 
+h2 {
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 0.125rem;
+
+    @include for-tablet-portrait-up {
+        letter-spacing: 0.25rem;
+        font-size: 2rem;
+        line-height: 2rem;
+    }
+}
+
 p {
     font-size: 1rem;
     line-height: 1.375rem;
