--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -50,13 +50,12 @@ a {
 
 .header {
     width: 100%;
-    margin-top: 1rem;
     padding: 0;
     display: flex;
     justify-content: center;
     flex-flow: column nowrap;
     position: relative;
-
+    margin-top:1rem;
     @include for-tablet-portrait-up {
         margin-top: 1.5rem;
     }
@@ -75,7 +74,7 @@ a {
     .header_image {
         width:980px;
         height:auto;
-        margin:1.5rem auto 0;
+        margin:0 auto;
         order:3;
         @include for-desktop-up {
             order:2;
@@ -86,14 +85,12 @@ a {
         cursor: pointer;
         display: inline-block;
         user-select: none;
-        order:2;
         z-index: 100;
     
         @include for-desktop-up {
             position: relative;
             display:block;
             margin-top: 1.5rem;
-            order:3;
         }
 
         .navicon {
@@ -104,7 +101,7 @@ a {
                 width:1.5rem;
                 position:absolute;
                 top:0.75rem;
-                left:0.75rem;
+                left:1rem;
 
                 @include for-desktop-up {
                     left:1.5rem;
@@ -145,100 +142,112 @@ a {
             }
         }
 
-        .menu-btn {
+    }
 
-            display: none;
+    .menu {
+        background-color: white;
+        order:2;
+        margin: 1.5rem 0 0 0;
+        padding: 0;
+        width:100%;
+        list-style: none;
+        overflow: hidden;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: flex-start;
+        align-items: center;
+        max-height: 0;
+        transition: all 0.4s cubic-bezier(0.57, 0.56, 0.12, 1);
 
+        @include for-desktop-up {
+            background-color: transparent;
+            flex-flow:row nowrap;
+            justify-content: center;
+            align-items: center;
+            max-height:none;
+            order:3;
+            margin-top: 2rem;
+        }
 
-            &:checked ~ .menu-wrapper .menu {
-                background-color: $green;
-                max-height: 540px;
-                padding-bottom: 2rem;
+        li {
+
+            &:first-child {
+                margin-top: 1rem;
+
+                @include for-desktop-up {
+                    margin-top: 0;
+                }
+            }
+            
+
+            @include for-desktop-up {
+                margin-bottom: 0;
+                margin-right: 0.5rem;
             }
 
-            &:checked ~ .menu-wrapper .navicon span {
+            a {
+                text-transform: uppercase;
+                font-size: 0.875rem;
+                font-weight: 500;
+                letter-spacing: 0.125rem;
+                display: inline-block;
+                padding: 1rem 1rem;
+                text-decoration: none;
+                text-align: left;
+                color:white;
+
+                &:hover {
+                    opacity:0.5;
+                }
+
+                @include for-desktop-up {
+                    text-align: center;
+                    padding:0 0.5rem;
+                    color:black;
+
+                    &:hover {
+                        opacity:1;
+                        color:$green;
+                    }
+                }
+
+            }
+          }
+
+      }
+
+    .menu-btn {
+        display: none;
+
+        @include up-to-desktop {
+            &:checked ~  .menu {
+                background-color: $green;
+                max-height: 540px;
+                padding-bottom: 1rem;
+            }
+
+            &:checked ~ .navicon span {
                 background-color: transparent;
             }
 
-            &:checked ~ .menu-wrapper .navicon span:before {
+            &:checked ~ .navicon span:before {
                 top:10px;
                 transform: rotate(45deg);
-               
+            
             }
 
-            &:checked ~ .menu-wrapper .navicon span:after {
+            &:checked ~ .navicon span:after {
                 transform: rotate(-45deg);
-          
+        
                 top:10px;
-            }
-
-            &:checked ~ .menu-wrapper .menu-icon:not(.steps) .navicon:before, &:checked ~ .menu-wrapper .menu-icon:not(.steps) .navicon:after {
-                top: 0;
             }
         }
 
-        .menu {
-            background-color: white;
-            margin: 1rem 0 0 0;
-            padding: 0;
-            width:100%;
-            list-style: none;
-            overflow: hidden;
-            display: flex;
-            flex-flow: column nowrap;
-            justify-content: flex-start;
-            align-items: center;
-            max-height: 0;
-            transition: all 0.4s cubic-bezier(0.57, 0.56, 0.12, 1);
-    
-            @include for-desktop-up {
+        @include for-desktop-up {
+            &:checked ~ .menu {
                 background-color: transparent;
-                flex-flow:row nowrap;
-                justify-content: center;
-                align-items: center;
-                max-height:none;
             }
-    
-            li {
-
-                &:first-child {
-                    margin-top: 2rem;
-
-                    @include for-desktop-up {
-                        margin-top: 0;
-                    }
-                }
-                
-    
-                @include for-desktop-up {
-                    margin-bottom: 0;
-                    margin-right: 0.5rem;
-                }
-    
-                a {
-                    text-transform: uppercase;
-                    font-size: 0.875rem;
-                    font-weight: 500;
-                    letter-spacing: 0.125rem;
-                    display: inline-block;
-                    padding: 1rem 1rem;
-                    text-decoration: none;
-                    text-align: left;
-                    color:white;
-    
-                    @include for-desktop-up {
-                        text-align: center;
-                        padding:0 0.5rem;
-                        color:black;
-                    }
-    
-                    &:hover {
-                        opacity:0.5;
-                    }
-                }
-              }
-    
-          }
+        }
     }
 
       
@@ -706,7 +715,7 @@ a {
 
 // TEMOIGNAGES
 
-#testimonies {
+#temoignages {
     overflow: hidden;
     background-color: $pink;
     h2 {
@@ -789,7 +798,7 @@ a {
     }
 
 
-    .testimony {
+    .temoignage {
         overflow: hidden;
         border-radius: 0.5rem;
         -webkit-box-shadow: 0px 24px 58px 0px rgba(0,0,0,0.2);
