--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -280,7 +280,7 @@ a {
             width:100%;
             height:100%;
 
-            padding-top: 3rem;
+            padding-top: 1.75rem;
 
             @include for-tablet-landscape-up {
 
@@ -305,11 +305,11 @@ a {
 
                     h1 {
                         text-align: center;
-                        font-size: 1.75rem;
+                        font-size: 1.5rem;
                         font-weight: 300;
-                        line-height: 2.5rem;
-                        letter-spacing: 0.05rem;
-                        margin-bottom: 1rem;
+                        line-height: 2rem;
+                        letter-spacing: 0.025rem;
+                        margin-bottom: 1.5rem;
 
                         @include for-tablet-landscape-up {
                             text-align: left;
@@ -320,9 +320,13 @@ a {
                     }
                     
                     .green-bold {
+                        font-size: 1.75rem;
                         color:$green;
                         font-weight: bold;
                         display: block;
+                        @include for-tablet-landscape-up {
+                            font-size: 2.25rem;
+                        }
                     }
 
                     p {
@@ -330,7 +334,7 @@ a {
                         text-align: center;
                         font-size: 1.125rem;
                         line-height: 2rem;
-                        margin-bottom: 3.5rem;
+                        margin-bottom: 2.5rem;
 
                         @include for-tablet-landscape-up {
                             text-align: left;
@@ -371,7 +375,7 @@ a {
 
 
 
-// RENCONTRES
+// RENCONTRE
 
 #rencontre {
 
@@ -411,11 +415,10 @@ a {
         }
 
         p {
-            font-size: 1rem;
+            font-size: 1.125rem;
             line-height: 1.75rem;
             @include for-tablet-portrait-up {
                 line-height: 2rem;
-                font-size: 1.125rem;
             }
         }
     }
@@ -438,22 +441,23 @@ a {
 
     h3 {
         text-align: center;
-        font-size: 1.125rem;
+        font-size: 1.25rem;
         color:black;
         font-weight: 400;
         line-height: 1.125rem;
         text-transform: none;
-        margin: 1rem 0 0 0;
+        margin: 1.25rem 0 0 0;
         padding: 0;
     }
 
     .etapes-grid {
-        margin-top: 3.5rem;
+        margin-top: 2.5rem;
         display: flex;
         flex-flow: column nowrap;
         justify-content: stretch;
         align-content: center;
         @include for-tablet-portrait-up {
+            margin-top: 3.5rem;
             flex-flow: row wrap;
             justify-content: space-between;
             align-content: center;
@@ -462,7 +466,7 @@ a {
         .step-item {
             flex: 1 1 auto;
             align-self: auto;
-            margin-bottom: 2rem;
+            margin-bottom: 1.25rem;
             @include for-tablet-portrait-up {
                 flex: 1 1 49%;
                 align-self: auto;
@@ -531,12 +535,11 @@ a {
             }
 
             p {
-                font-size: 1rem;
+                font-size: 1.125rem;
                 line-height: 1.75rem;
                 text-align: left;
                 @include for-tablet-portrait-up {
                     line-height: 2rem;
-                    font-size: 1.125rem;
                 }
             }
 
@@ -601,12 +604,11 @@ a {
 
 
             p {
-                font-size: 1rem;
+                font-size: 1.125rem;
                 line-height: 1.75rem;
                 margin-bottom: 0;
                 @include for-tablet-portrait-up {
                     line-height: 2rem;
-                    font-size: 1.125rem;
                 }
             }
 
@@ -678,12 +680,13 @@ a {
         }
     }
 
-    .description {
+    .description p {
         text-align: center;
         font-size: 1.125rem;
     }
 
     .tableau_honoraires {
+        margin-top: 2rem;
         border: 1px solid #E8F6F6;
 
         li {
@@ -868,7 +871,7 @@ a {
     margin-left: auto;
     margin-right: auto;
     h4 {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         font-weight: 300;
         text-align: left;
         color:$green;
@@ -886,6 +889,10 @@ a {
             height: 1px;
             flex: 1;
             content: '';
+        }
+
+        @include for-tablet-landscape-up {
+            font-size: 1.75rem;
         }
     }
 
@@ -1061,12 +1068,14 @@ a {
 
 footer {
     background-color: #F7FBFA;
-    padding:1.5rem 0 1.25rem;
+    padding:1.5rem 0 1.75rem 0;
     font-size: 0.875rem;
     line-height: 0.875rem;
     text-align: center;
+    color:#536E6A;
     @include for-tablet-landscape-up {
-        text-align:left;
+    
+        padding:1.5rem 0 1.25rem 0;
     }
 }
 
