--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -35,7 +35,7 @@ img {
 }
 
 a {
-    transition: all 0.4s cubic-bezier(0.57, 0.56, 0.12, 1);
+    transition: color 0.4s cubic-bezier(0.57, 0.56, 0.12, 1);
 }
 
 .container {
@@ -44,221 +44,6 @@ a {
     padding-right: 24px;
     margin-right: auto;
     margin-left: auto;
-}
-
-// HEADER
-
-.header {
-    width: 100%;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    flex-flow: column nowrap;
-    position: relative;
-    margin-top:1rem;
-    @include for-tablet-portrait-up {
-        margin-top: 1.5rem;
-    }
-
-    .logo {
-        max-width:240px;
-        height:auto;
-        margin:0 auto 0 auto;
-        order: 1;
-
-        @include for-tablet-portrait-up {
-            max-width: 340px;
-        }
-    }
-
-    .header_image {
-        width:980px;
-        height:auto;
-        margin:0 auto;
-        order:3;
-        @include for-desktop-up {
-            order:2;
-        }
-    }
-
-    .menu-icon {
-        cursor: pointer;
-        display: inline-block;
-        background-color: #fff;
-        user-select: none;
-        z-index: 100;
-        width:0;
-    
-        @include for-desktop-up {
-            position: relative;
-            display:block;
-            margin-top: 1.5rem;
-        }
-
-        .navicon {
-                padding-top: 10px;
-                display:block;
-                height:20px;
-                width:1.5rem;
-                position:absolute;
-                top:0.75rem;
-                left:1rem;
-
-                @include for-desktop-up {
-                    left:1.5rem;
-                    top:1.5rem;
-                }
-
-                @include for-desktop-up {
-                    display: none;
-                }
-
-            span {
-                background: #000;
-                display: block;
-                height: 2px;
-                width: 100%;
-                border-radius:4px;
-                transition: background 0.4s cubic-bezier(0.57, 0.56, 0.12, 1);
-        
-                &:before, &:after {
-                    background: #000;
-                    content: '';
-                    display: block;
-                    height: 2px;
-                    position: absolute;
-                    transition: all .2s ease-out;
-                    width: 100%;
-                    border-radius:4px;
-                    transition: all 0.4s cubic-bezier(0.57, 0.56, 0.12, 1);
-                }
-        
-                &:before {
-                    top: 0;
-                }
-        
-                &:after {
-                    top: 20px;
-                }
-            }
-        }
-
-    }
-
-    .menu {
-        
-        background-color: white;
-        order:2;
-        margin: 1.5rem 0 0 0;
-        padding: 0;
-        width:100%;
-        list-style: none;
-        overflow: hidden;
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: flex-start;
-        align-items: center;
-        max-height: 0;
-        transition: all 0.4s cubic-bezier(0.57, 0.56, 0.12, 1);
-
-        @include for-desktop-up {
-            background-color: transparent;
-            flex-flow:row nowrap;
-            justify-content: center;
-            align-items: center;
-            max-height:none;
-            order:3;
-            margin-top: 2rem;
-        }
-
-        li {
-
-            &:first-child {
-                margin-top: 1rem;
-
-                @include for-desktop-up {
-                    margin-top: 0;
-                }
-            }
-            
-
-            @include for-desktop-up {
-                margin-bottom: 0;
-                margin-right: 0.5rem;
-            }
-
-            a {
-                text-transform: uppercase;
-                font-size: 0.875rem;
-                font-weight: 500;
-                letter-spacing: 0.125rem;
-                display: inline-block;
-                padding: 1rem 1rem;
-                text-decoration: none;
-                text-align: left;
-                color:white;
-
-                &:hover {
-                    opacity:0.5;
-                }
-
-                @include for-desktop-up {
-                    text-align: center;
-                    padding:0 0.5rem;
-                    color:black;
-
-                    &:hover {
-                        opacity:1;
-                        color:$green;
-                    }
-                }
-
-            }
-          }
-
-      }
-
-    .menu-btn {
-        display: none;
-        -webkit-backface-visibility: hidden;
-
-        &:focus {
-            outline:none;
-        }
-
-        @include up-to-desktop {
-            &:checked ~  .menu {
-                background-color: $green;
-                max-height: 280px;
-                padding-bottom: 1rem;
-            }
-
-            &:checked ~ .menu-icon .navicon span {
-                background-color: transparent;
-            }
-
-            &:checked ~ .menu-icon .navicon span:before {
-                top:10px;
-                transform: rotate(45deg);
-            
-            }
-
-            &:checked ~ .menu-icon .navicon span:after {
-                transform: rotate(-45deg);
-        
-                top:10px;
-            }
-        }
-
-        @include for-desktop-up {
-            &:checked ~ .menu {
-                background-color: transparent;
-            }
-        }
-    }
-
-      
-
 }
   
 
@@ -271,7 +56,7 @@ a {
         @include for-tablet-landscape-up {
             background-color: transparent;
             padding-top: 3rem;
-            margin-bottom: 10rem;
+            margin-bottom: 6rem;
             height:95vh;
         }
 
@@ -378,16 +163,15 @@ a {
 // RENCONTRE
 
 #rencontre {
-
     max-width: 842px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
 
 
-    .birds {
-        width:64px;
-        
+    .bird {
+        margin: 0 auto;
+        width:64px; 
     }
     
     .rencontre-content {
@@ -719,6 +503,54 @@ a {
             background-color:#E8F6F6;
         }
 
+    }
+}
+
+#charte-deontologie {
+    max-width: 842px;
+    h4 {
+        font-size: 1.25rem;
+        font-weight: 300;
+        text-align: center;
+        color:$green;
+        margin: 0;
+        text-transform: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        span {
+            margin: 0 1rem 0 1rem;
+        }
+        &:before {
+            background:$green;
+            opacity: 0.2;
+            height: 1px;
+            flex: 1;
+            content: '';
+        }
+        &:after {
+            background:$green;
+            opacity: 0.2;
+            height: 1px;
+            flex: 1;
+            content: '';
+        }
+
+        @include for-tablet-landscape-up {
+            font-size: 1.75rem;
+        }
+    }
+
+    .charte-text {
+        text-align: center;
+
+        a {
+            color:black;
+
+            &:hover {
+                color:$green;
+            }
+        }
     }
 }
 
@@ -1064,18 +896,5 @@ a {
         }
     }
 
-}
-
-footer {
-    background-color: #F7FBFA;
-    padding:1.5rem 0 1.75rem 0;
-    font-size: 0.875rem;
-    line-height: 0.875rem;
-    text-align: center;
-    color:#536E6A;
-    @include for-tablet-landscape-up {
-    
-        padding:1.5rem 0 1.25rem 0;
-    }
 }
 
