--- a/src/scss/content/_footer.scss
+++ b/src/scss/content/_footer.scss
@@ -5,7 +5,7 @@ footer {
     background-color: #F7FBFA;
     padding:1.5rem 0;
     @include for-tablet-landscape-up {
-        padding:1.5rem 0;
+        padding:1.5rem 0 1.25rem 0;
     }
 
     .container {
