--- a/src/scss/content/_footer.scss
+++ b/src/scss/content/_footer.scss
@@ -11,14 +11,22 @@ footer {
     .container {
         display: flex;
         justify-content: space-between;
-        flex-flow:row nowrap;
-        align-items: flex-end;
+        flex-flow:column nowrap;
+        align-items: center;
+        @include for-tablet-portrait-up {
+            flex-flow:row nowrap;
+            align-items: flex-start;
+        }
 
         .left-mention {
             font-size: 0.875rem;
             line-height: 1rem;
             text-align: center;
             color:#536E6A;
+            @include for-phone-only {
+               margin-top: 0.875rem;
+               order:2;
+            }
         }
 
         .footer-nav {
